added modal text fills

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       </div>
     </div>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#questionModal">
   Launch demo modal
 </button>
 
 <!-- Game Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="questionModal" tabindex="-1" role="dialog" aria-labelledby="questionModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Question goes here</h5>
+        <h5 class="modal-title" id="question-text">Question goes here</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -38,19 +38,19 @@
         <div class="container">
         <div class="row my-2">
           <button type="button" class="btn btn-primary col-2">A</button>
-          <p id="question-field-1" class="col-10">choice text here</p>
+          <p id="question-field-0" class="col-10">choice text here</p>
         </div>
         <div class="row my-2">
           <button type="button" class="btn btn-primary col-2">B</button>
-          <p id="question-field-2" class="col-10">choice text here</p>
+          <p id="question-field-1" class="col-10">choice text here</p>
         </div>
         <div class="row my-2">
           <button type="button" class="btn btn-primary col-2">C</button>
-          <p id="question-field-3" class="col-10">choice text here</p>
+          <p id="question-field-2" class="col-10">choice text here</p>
         </div>
         <div class="row my-2">
           <button type="button" class="btn btn-primary col-2">D</button>
-          <p id="question-field-4" class="col-10">choice text here</p>
+          <p id="question-field-3" class="col-10">choice text here</p>
         </div>
       </div>
     </div>
