--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="container">
-        <div class="row my-2">
-          <button type="button" class="btn btn-primary col-2">A</button>
-          <p id="question-field-0" class="col-10">choice text here</p>
-        </div>
-        <div class="row my-2">
-          <button type="button" class="btn btn-primary col-2">B</button>
-          <p id="question-field-1" class="col-10">choice text here</p>
-        </div>
-        <div class="row my-2">
-          <button type="button" class="btn btn-primary col-2">C</button>
-          <p id="question-field-2" class="col-10">choice text here</p>
-        </div>
-        <div class="row my-2">
-          <button type="button" class="btn btn-primary col-2">D</button>
-          <p id="question-field-3" class="col-10">choice text here</p>
-        </div>
+        <div id="question-buttons" class="container">
+          <div class="row my-2">
+            <button id="button-0" data-istrue="false" type="button" class="btn btn-primary col-2">A</button>
+            <p id="question-field-0" class="col-10">choice text here</p>
+          </div>
+          <div class="row my-2">
+            <button id="button-1" data-istrue="false" type="button" class="btn btn-primary col-2">B</button>
+            <p id="question-field-1" class="col-10">choice text here</p>
+          </div>
+          <div class="row my-2">
+            <button id="button-2" data-istrue="false" type="button" class="btn btn-primary col-2">C</button>
+            <p id="question-field-2" class="col-10">choice text here</p>
+          </div>
+          <div class="row my-2">
+            <button id="button-3" data-istrue="false" type="button" class="btn btn-primary col-2">D</button>
+            <p id="question-field-3" class="col-10">choice text here</p>
+          </div>
       </div>
     </div>
   </div>
