removed all prompts and condensed code to run FETCH more directly

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <button id="name-confirm" type="submit" class="btn btn-primary mb-2">Confirm identity</button>
     </div>
   </div>
-  <div class="row justify-content-center d-none">
-    <button id="selector-music" type="button" class="btn btn-secondary btn-lg btn-block">MUSIC</button>
-    <button id="selector-movies" type="button" class="btn btn-primary btn-lg btn-block">MOVIES</button>
-    <button id="selector-computers" type="button" class="btn btn-primary btn-lg btn-block">COMPUTERS</button>
-    <button id="selector-math" type="button" class="btn btn-secondary btn-lg btn-block">MATH</button>
+  <div id="category-div" class="row justify-content-center d-none">
+    <button id="selector-music" data-apiID="12" type="button" class="btn btn-secondary btn-lg btn-block">MUSIC</button>
+    <button id="selector-movies" data-apiID="11" type="button" class="btn btn-primary btn-lg btn-block">MOVIES</button>
+    <button id="selector-computers" data-apiID="18" type="button" class="btn btn-primary btn-lg btn-block">COMPUTERS</button>
+    <button id="selector-math" data-apiID="19" type="button" class="btn btn-secondary btn-lg btn-block">MATH</button>
   </div>
 </div>
 
