function calling twice second time thru

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <button id="selector-computers" data-apiID="18" type="button" class="btn btn-primary btn-lg btn-block">COMPUTERS</button>
     <button id="selector-math" data-apiID="19" type="button" class="btn btn-secondary btn-lg btn-block">MATH</button>
   </div>
+  <div id="end-game-prompt" class="row d-none">
+    <h5 id="end-game-text"></h5>
+    <button id="play-again-btn" type="button" class="btn btn-primary btn-lg btn-block">PLAY AGAIN</button>
+    <button id="see-scores-btn" type="button" class="btn btn-primary btn-lg btn-block">SEE SCORES</button>
+  </div>
 </div>
 
 <!-- Game Modal -->
