--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   <div class="row d-none" id="name-row">
     <div class="col-9">
-      <input class="form-control" id="name-input" placeholder="Put that name here...">
+      <input class="form-control" id="name-input" placeholder="Put that name here..">
     </div>
     <div class="col-3">
       <button id="name-confirm" type="submit" class="btn btn-primary mb-2">Confirm identity</button>
