--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input class="form-control" id="name-input" placeholder="Put that name here..">
     </div>
     <div class="col-3">
-      <button id="name-confirm" type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+      <button id="name-confirm" type="submit" class="btn btn-primary mb-2">Let's Play</button>
     </div>
   </div>
   <div id="category-div" class="row justify-content-center d-none">
@@ -48,6 +48,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="question-text">Question goes here</h5>
+        <p id="time-remaining"></p>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -79,7 +80,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src='js/questions.js'></script> 
     <script src='js/script.js'></script> 
   </body>
 </html>
