added sorted score section

--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
             <button id="button-3" data-istrue="false" type="button" class="btn btn-primary col-2">D</button>
             <p id="question-field-3" class="col-10">choice text here</p>
           </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<div id="score-section" class="row d-none px-3"></div>
     <!--Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
