--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="question-text">Question goes here</h5>
-        <p id="time-remaining"></p>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <p id="time-remaining" class="m-3 p-3"></p>
       </div>
       <div class="modal-body">
         <div id="question-buttons" class="container">
