--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Trivia Time</title>
   </head>
@@ -14,31 +16,31 @@
 <!-- Button trigger modal -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Trivia Du Jour</a>
+  <a class="navbar-brand lobster" href="#">Trivia Du Jour</a>
   <button type="button" class="btn btn-outline-info" id="seeLeaderBoardBtn">Leaderboard</button>
 </nav>
 <div class="container">
   <div class="row justify-content-center py-5">
-    <h1 id="startGameBtn">Click Me To Play</h1>
+    <h1 id="startGameBtn" class="lobster">Click Me To Play</h1>
   </div>
   <div class="row d-none" id="name-row">
     <div class="col-9">
-      <input class="form-control" id="name-input" placeholder="Put that name here..">
+      <input class="form-control" id="name-input" placeholder="What's your name???">
     </div>
     <div class="col-3">
-      <button id="name-confirm" type="submit" class="btn btn-primary mb-2">Let's Play</button>
+      <button id="name-confirm" type="submit" class="btn btn-outline-info mb-2">Let's Play</button>
     </div>
   </div>
   <div id="category-div" class="row justify-content-center d-none">
-    <button id="selector-music" data-apiID="12" type="button" class="btn btn-secondary btn-lg btn-block">MUSIC</button>
-    <button id="selector-movies" data-apiID="11" type="button" class="btn btn-primary btn-lg btn-block">MOVIES</button>
-    <button id="selector-computers" data-apiID="18" type="button" class="btn btn-primary btn-lg btn-block">COMPUTERS</button>
-    <button id="selector-math" data-apiID="19" type="button" class="btn btn-secondary btn-lg btn-block">MATH</button>
+    <button id="selector-music" data-apiID="12" type="button" class="btn btn-outline-info btn-lg btn-block">MUSIC</button>
+    <button id="selector-movies" data-apiID="11" type="button" class="btn btn-outline-info btn-lg btn-block">MOVIES</button>
+    <button id="selector-computers" data-apiID="18" type="button" class="btn btn-outline-info btn-lg btn-block">COMPUTERS</button>
+    <button id="selector-math" data-apiID="19" type="button" class="btn btn-outline-info btn-lg btn-block">MATH</button>
   </div>
   <div id="end-game-prompt" class="row d-none">
-    <h5 id="end-game-text"></h5>
-    <button id="play-again-btn" type="button" class="btn btn-primary btn-lg btn-block">PLAY AGAIN</button>
-    <button id="see-scores-btn" type="button" class="btn btn-primary btn-lg btn-block">SEE SCORES</button>
+    <h5 id="end-game-text" class="lobster"></h5>
+    <button id="play-again-btn" type="button" class="btn btn-outline-info btn-lg btn-block">PLAY AGAIN</button>
+    <button id="see-scores-btn" type="button" class="btn btn-outline-info btn-lg btn-block">SEE SCORES</button>
   </div>
 </div>
 
@@ -48,24 +50,24 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="question-text">Question goes here</h5>
-        <p id="time-remaining" class="m-3 p-3"></p>
+        <p id="time-remaining" class="m-3 p-3 lobster"></p>
       </div>
       <div class="modal-body">
         <div id="question-buttons" class="container">
           <div class="row my-2">
-            <button id="button-0" data-istrue="false" type="button" class="btn btn-primary col-2">A</button>
+            <button id="button-0" data-istrue="false" type="button" class="btn btn-outline-info col-2">A</button>
             <p id="question-field-0" class="col-10">choice text here</p>
           </div>
           <div class="row my-2">
-            <button id="button-1" data-istrue="false" type="button" class="btn btn-primary col-2">B</button>
+            <button id="button-1" data-istrue="false" type="button" class="btn btn-outline-info col-2">B</button>
             <p id="question-field-1" class="col-10">choice text here</p>
           </div>
           <div class="row my-2">
-            <button id="button-2" data-istrue="false" type="button" class="btn btn-primary col-2">C</button>
+            <button id="button-2" data-istrue="false" type="button" class="btn btn-outline-info col-2">C</button>
             <p id="question-field-2" class="col-10">choice text here</p>
           </div>
           <div class="row my-2">
-            <button id="button-3" data-istrue="false" type="button" class="btn btn-primary col-2">D</button>
+            <button id="button-3" data-istrue="false" type="button" class="btn btn-outline-info col-2">D</button>
             <p id="question-field-3" class="col-10">choice text here</p>
           </div>
         </div>
