centered leader board

--- a/index.html
+++ b/index.html
@@ -75,7 +75,14 @@
     </div>
   </div>
 </div>
-<div id="score-section" class="row d-none px-3"></div>
+<div id="score-section" class="container d-none px-3">
+  <div class="row">
+    <h2 class="col lobster text-center">Smart people list!</h2>
+  </div>
+  <div class="row">
+    <ul id="score-list" class="listgroup col"></ul>
+  </div>
+</div>
     <!--Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
