fixed issue with local storage having less than 5 items

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="end-game-prompt" class="row d-none">
     <h5 id="end-game-text" class="lobster"></h5>
     <button id="play-again-btn" type="button" class="btn btn-outline-info btn-lg btn-block">PLAY AGAIN</button>
-    <button id="see-scores-btn" type="button" class="btn btn-outline-info btn-lg btn-block">SEE SCORES</button>
+   <!-- <button id="see-scores-btn" type="button" class="btn btn-outline-info btn-lg btn-block">SEE SCORES</button> -->
   </div>
 </div>
 
@@ -79,7 +79,7 @@
   <div class="row">
     <h2 class="col lobster text-center">Smart people list!</h2>
   </div>
-  <div class="row">
+  <div class="row`">
     <ul id="score-list" class="listgroup col"></ul>
   </div>
 </div>
