--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
   <body>
 <!-- Button trigger modal -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand lobster" href="#">Trivia Du Jour</a>
   <button type="button" class="btn btn-outline-info" id="seeLeaderBoardBtn">Leaderboard</button>
@@ -50,6 +49,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="question-text">Question goes here</h5>
+        <h5 id="correct-incorrect"></h5>
         <p id="time-remaining" class="m-3 p-3 lobster"></p>
       </div>
       <div class="modal-body">
@@ -76,7 +76,7 @@
   </div>
 </div>
 <div id="score-section" class="container d-none px-3">
-  <div class="row">
+  <div id="score-text" class="row">
     <h2 class="col lobster text-center">Smart people list!</h2>
   </div>
   <div class="row`">
